k8s/deployments/python-app/example/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/instance: cm-client
    app.kubernetes.io/name: cm-client
  name: cm-client-svc
  namespace: cm
spec:
  ports:
  - name: http
    port: 8080
    protocol: TCP
    targetPort: http
  selector:
    app.kubernetes.io/instance: cm-client
    app.kubernetes.io/name: cm-client
  type: ClusterIP
